pca6 and stacking help a lot

--- a/other_hand_features/prepare_other_feat_v2_no_help.ipynb
+++ b/other_hand_features/prepare_other_feat_v2_no_help.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -36,121 +36,124 @@
     "import pandas as pd\n",
     "train_df = pd.read_json('../input/train.json')\n",
     "test_df = pd.read_json('../input/test.json')\n",
-    "print(train_df.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "print(train_df.head())\n",
+    "\n",
     "import numpy as np\n",
     "import cv2\n",
+    "from itertools import combinations\n",
     "from scipy.ndimage import laplace, sobel\n",
-    "from scipy.stats import kurtosis, skew\n",
-    "\n",
-    "def get_img_feat(img):\n",
-    "    feats = [np.mean(img),np.std(img),np.median(img),np.max(img),np.min(img)]\n",
-    "    \n",
-    "    return feats\n",
-    "    \n",
-    "def get_other_feat(df):\n",
-    "    feats = []\n",
-    "    for i, row in df.iterrows():\n",
-    "        tmp_feat = []\n",
-    "        img1 = np.array(row['band_1']).reshape(75, 75).astype('float32')\n",
-    "        img2 = np.array(row['band_2']).reshape(75, 75).astype('float32')\n",
-    "        if row['inc_angle'] == 'na':\n",
-    "            ang = 0\n",
-    "        else:\n",
-    "            ang = float(row['inc_angle'])\n",
-    "        tmp_feat = get_img_feat(img1) + get_img_feat(img2) + [ang]\n",
-    "        \n",
-    "        \n",
-    "        feats.append(tmp_feat)\n",
-    "        \n",
-    "    return np.array(feats).astype('float32')\n",
-    "\n",
-    "train_feat = get_other_feat(train_df)\n",
-    "test_feat = get_other_feat(test_df)"
+    "from scipy.stats import kurtosis, skew"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-27.91104507   2.76453733 -27.87992096  -0.213149   -38.21137619\n",
-      "  -29.9101162    2.381284   -30.00784683 -11.2521534  -41.13591766\n",
-      "   43.9239006 ]\n",
-      " [-13.56655312   3.14253163 -13.65419865  12.57040882 -23.12530899\n",
-      "  -25.35910606   2.93409801 -25.48612976   0.044052   -34.76583099\n",
-      "   38.15620041]]\n"
+      "raw feats\n"
      ]
     }
    ],
    "source": [
-    "print(train_feat[:2])  "
+    "def get_img_feat(img_org):\n",
+    "    img = img_org.ravel()\n",
+    "    feats = [np.mean(img),np.std(img),np.median(img),np.max(img),np.min(img)]\n",
+    "    return feats\n",
+    "\n",
+    "    \n",
+    "def get_other_feat(df):\n",
+    "    band1,band2,band3,angs = [],[],[],[]\n",
+    "    for i, row in df.iterrows():\n",
+    "        tmp_feat = []\n",
+    "        img1 = np.array(row['band_1']).astype('float32')\n",
+    "        img2 = np.array(row['band_2']).astype('float32')\n",
+    "        \n",
+    "        if row['inc_angle'] == 'na':\n",
+    "            ang = -1\n",
+    "        else:\n",
+    "            ang = float(row['inc_angle'])\n",
+    "            \n",
+    "\n",
+    "        img3 = (img1-img2)*ang/2.0\n",
+    "        band1.append(img1)\n",
+    "        band2.append(img2)\n",
+    "        band3.append(img3)\n",
+    "        tmp_feat = [ang] + get_img_feat(img1) + get_img_feat(img2)\n",
+    "        angs.append(tmp_feat)\n",
+    "    return band1,band2,band3,angs\n",
+    "        \n",
+    "        \n",
+    "\n",
+    "a_band1,a_band2,a_band3,a_angs = get_other_feat(train_df)\n",
+    "a_bands = np.hstack([a_band1,a_band2,a_band3])\n",
+    "b_band1,b_band2,b_band3,b_angs = get_other_feat(test_df)\n",
+    "b_bands = np.hstack([b_band1,b_band2,b_band3])\n",
+    "print('raw feats')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(1604, 11)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pca done (1604, 20)\n"
+     ]
     }
    ],
    "source": [
-    "train_feat.shape"
+    "from sklearn import decomposition\n",
+    "pca_b1 = decomposition.PCA(n_components=20, whiten=True, random_state=15)\n",
+    "a_band_feat = pca_b1.fit_transform(np.array(a_bands))\n",
+    "b_band_feat = pca_b1.transform(np.array(b_bands))\n",
+    "print('pca done',a_band_feat.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "dtype('float32')"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1604, 31) (8424, 31)\n"
+     ]
     }
    ],
    "source": [
-    "train_feat.dtype"
+    "train_feat = np.hstack([a_band_feat,np.array(a_angs)])\n",
+    "test_feat = np.hstack([b_band_feat,np.array(b_angs)])\n",
+    "\n",
+    "print(train_feat.shape,test_feat.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done\n"
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
     "with open('../features/other_feat.pkl','wb') as fout:\n",
-    "    pickle.dump([train_feat,test_feat],fout)"
+    "    pickle.dump([train_feat,test_feat],fout)\n",
+    "print('done')"
    ]
   }
  ],
