--- a/notebooks/xgb_ensemble-all.ipynb
+++ b/notebooks/xgb_ensemble-all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 81,
    "metadata": {
     "scrolled": true
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 84,
    "metadata": {
     "scrolled": false
    },
@@ -248,380 +248,73 @@
       "Stopping. Best iteration:\n",
       "[75]\ttrain-logloss:0.060227\tvalid-logloss:0.143718\n",
       "\n",
-      "local average valid loss 0.137304774026 val loss std 0.00916458379182\n"
+      "local average valid loss 0.137304774026 val loss std 0.00916458379182\n",
+      "         id  is_iceberg\n",
+      "0  5941774d    0.016633\n",
+      "1  4023181e    0.721887\n",
+      "2  b20200e4    0.041840\n",
+      "3  e7f018bb    0.997654\n",
+      "4  4371c8c3    0.099043\n",
+      "         id  is_iceberg\n",
+      "0  5941774d    0.016310\n",
+      "1  4023181e    0.713820\n",
+      "2  b20200e4    0.040278\n",
+      "3  e7f018bb    0.997701\n",
+      "4  4371c8c3    0.098014\n"
      ]
     }
    ],
    "source": [
-    "cv_test(3,42,False)"
+    "cv_test(3,42,True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 85,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0]\ttrain-logloss:0.635896\tvalid-logloss:0.639603\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[104]\ttrain-logloss:0.047242\tvalid-logloss:0.14303\n",
-      "\n",
-      "[0]\ttrain-logloss:0.636493\tvalid-logloss:0.637751\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[134]\ttrain-logloss:0.039225\tvalid-logloss:0.105996\n",
-      "\n",
-      "[0]\ttrain-logloss:0.636255\tvalid-logloss:0.639429\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[69]\ttrain-logloss:0.067899\tvalid-logloss:0.158509\n",
-      "\n",
-      "[0]\ttrain-logloss:0.636399\tvalid-logloss:0.639003\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[95]\ttrain-logloss:0.056775\tvalid-logloss:0.113499\n",
-      "\n",
-      "[0]\ttrain-logloss:0.635953\tvalid-logloss:0.638862\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[58]\ttrain-logloss:0.076126\tvalid-logloss:0.166033\n",
-      "\n",
-      "local average valid loss 0.138568325138 val loss std 0.0246098639346\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cv_test(5,42,False)"
+    "#cv_test(5,42,True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 86,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0]\ttrain-logloss:0.636212\tvalid-logloss:0.64085\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[123]\ttrain-logloss:0.042183\tvalid-logloss:0.166299\n",
-      "\n",
-      "[0]\ttrain-logloss:0.636535\tvalid-logloss:0.638121\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[145]\ttrain-logloss:0.036017\tvalid-logloss:0.114065\n",
-      "\n",
-      "[0]\ttrain-logloss:0.636596\tvalid-logloss:0.639044\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[118]\ttrain-logloss:0.045574\tvalid-logloss:0.109725\n",
-      "\n",
-      "[0]\ttrain-logloss:0.636491\tvalid-logloss:0.637701\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[213]\ttrain-logloss:0.021801\tvalid-logloss:0.088121\n",
-      "\n",
-      "[0]\ttrain-logloss:0.63561\tvalid-logloss:0.639965\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[52]\ttrain-logloss:0.086146\tvalid-logloss:0.19739\n",
-      "\n",
-      "[0]\ttrain-logloss:0.636833\tvalid-logloss:0.637887\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[133]\ttrain-logloss:0.039862\tvalid-logloss:0.111044\n",
-      "\n",
-      "[0]\ttrain-logloss:0.636637\tvalid-logloss:0.637755\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[105]\ttrain-logloss:0.050864\tvalid-logloss:0.139861\n",
-      "\n",
-      "[0]\ttrain-logloss:0.637076\tvalid-logloss:0.636613\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[115]\ttrain-logloss:0.049941\tvalid-logloss:0.079202\n",
-      "\n",
-      "[0]\ttrain-logloss:0.636533\tvalid-logloss:0.639649\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[77]\ttrain-logloss:0.067185\tvalid-logloss:0.167185\n",
-      "\n",
-      "[0]\ttrain-logloss:0.63614\tvalid-logloss:0.639739\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[58]\ttrain-logloss:0.0824\tvalid-logloss:0.176508\n",
-      "\n",
-      "local average valid loss 0.136674931672 val loss std 0.0391348723217\n",
-      "         id  is_iceberg\n",
-      "0  5941774d    0.024514\n",
-      "1  4023181e    0.778659\n",
-      "2  b20200e4    0.041248\n",
-      "3  e7f018bb    0.997680\n",
-      "4  4371c8c3    0.157811\n",
-      "         id  is_iceberg\n",
-      "0  5941774d    0.022766\n",
-      "1  4023181e    0.784131\n",
-      "2  b20200e4    0.040243\n",
-      "3  e7f018bb    0.998062\n",
-      "4  4371c8c3    0.160376\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cv_test(10,42,True)"
+    "#cv_test(10,42,True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0]\ttrain-logloss:0.637601\tvalid-logloss:0.63842\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[177]\ttrain-logloss:0.024429\tvalid-logloss:0.109735\n",
-      "\n",
-      "[0]\ttrain-logloss:0.636143\tvalid-logloss:0.639263\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[125]\ttrain-logloss:0.038698\tvalid-logloss:0.121327\n",
-      "\n",
-      "[0]\ttrain-logloss:0.63467\tvalid-logloss:0.640294\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[58]\ttrain-logloss:0.06178\tvalid-logloss:0.175326\n",
-      "\n",
-      "local average valid loss 0.137334707408 val loss std 0.0300850943431\n",
-      "         id  is_iceberg\n",
-      "0  5941774d    0.020480\n",
-      "1  4023181e    0.741906\n",
-      "2  b20200e4    0.032516\n",
-      "3  e7f018bb    0.997203\n",
-      "4  4371c8c3    0.174983\n",
-      "         id  is_iceberg\n",
-      "0  5941774d    0.019070\n",
-      "1  4023181e    0.722701\n",
-      "2  b20200e4    0.033741\n",
-      "3  e7f018bb    0.997621\n",
-      "4  4371c8c3    0.159176\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cv_test(3,233,True)"
+    "#cv_test(3,233,True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0]\ttrain-logloss:0.635818\tvalid-logloss:0.639304\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[136]\ttrain-logloss:0.035315\tvalid-logloss:0.13418\n",
-      "\n",
-      "[0]\ttrain-logloss:0.636666\tvalid-logloss:0.634863\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[267]\ttrain-logloss:0.014552\tvalid-logloss:0.069974\n",
-      "\n",
-      "[0]\ttrain-logloss:0.636293\tvalid-logloss:0.63801\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[109]\ttrain-logloss:0.048782\tvalid-logloss:0.129253\n",
-      "\n",
-      "[0]\ttrain-logloss:0.635915\tvalid-logloss:0.641738\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[85]\ttrain-logloss:0.051651\tvalid-logloss:0.178146\n",
-      "\n",
-      "[0]\ttrain-logloss:0.636024\tvalid-logloss:0.639166\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[76]\ttrain-logloss:0.06247\tvalid-logloss:0.154032\n",
-      "\n",
-      "local average valid loss 0.135441106234 val loss std 0.0371473507586\n",
-      "         id  is_iceberg\n",
-      "0  5941774d    0.016975\n",
-      "1  4023181e    0.800053\n",
-      "2  b20200e4    0.028918\n",
-      "3  e7f018bb    0.998095\n",
-      "4  4371c8c3    0.160482\n",
-      "         id  is_iceberg\n",
-      "0  5941774d    0.015367\n",
-      "1  4023181e    0.804817\n",
-      "2  b20200e4    0.029983\n",
-      "3  e7f018bb    0.998389\n",
-      "4  4371c8c3    0.165476\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cv_test(5,233,True)"
+    "#cv_test(5,233,True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 89,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0]\ttrain-logloss:0.637673\tvalid-logloss:0.639818\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[148]\ttrain-logloss:0.034534\tvalid-logloss:0.106452\n",
-      "\n",
-      "[0]\ttrain-logloss:0.636522\tvalid-logloss:0.64018\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[137]\ttrain-logloss:0.03769\tvalid-logloss:0.145607\n",
-      "\n",
-      "[0]\ttrain-logloss:0.636905\tvalid-logloss:0.636679\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[122]\ttrain-logloss:0.047218\tvalid-logloss:0.075511\n",
-      "\n",
-      "[0]\ttrain-logloss:0.637077\tvalid-logloss:0.637841\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[373]\ttrain-logloss:0.008869\tvalid-logloss:0.066758\n",
-      "\n",
-      "[0]\ttrain-logloss:0.636547\tvalid-logloss:0.636815\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[120]\ttrain-logloss:0.047879\tvalid-logloss:0.091194\n",
-      "\n",
-      "[0]\ttrain-logloss:0.635774\tvalid-logloss:0.641048\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[83]\ttrain-logloss:0.062753\tvalid-logloss:0.173103\n",
-      "\n",
-      "[0]\ttrain-logloss:0.636579\tvalid-logloss:0.639222\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[64]\ttrain-logloss:0.076851\tvalid-logloss:0.172774\n",
-      "\n",
-      "[0]\ttrain-logloss:0.635538\tvalid-logloss:0.640311\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[81]\ttrain-logloss:0.060014\tvalid-logloss:0.195227\n",
-      "\n",
-      "[0]\ttrain-logloss:0.636624\tvalid-logloss:0.639771\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[60]\ttrain-logloss:0.078518\tvalid-logloss:0.175738\n",
-      "\n",
-      "[0]\ttrain-logloss:0.63633\tvalid-logloss:0.639639\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[126]\ttrain-logloss:0.042379\tvalid-logloss:0.134897\n",
-      "\n",
-      "local average valid loss 0.136051026442 val loss std 0.0446205753579\n",
-      "         id  is_iceberg\n",
-      "0  5941774d    0.023478\n",
-      "1  4023181e    0.783156\n",
-      "2  b20200e4    0.033006\n",
-      "3  e7f018bb    0.997860\n",
-      "4  4371c8c3    0.174473\n",
-      "         id  is_iceberg\n",
-      "0  5941774d    0.021136\n",
-      "1  4023181e    0.789239\n",
-      "2  b20200e4    0.032996\n",
-      "3  e7f018bb    0.998243\n",
-      "4  4371c8c3    0.170825\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cv_test(10,233,True)"
+    "#cv_test(10,233,True)"
    ]
   }
  ],
